# SEIMS

./: .bookignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Changelog.md  Dockerfile  Dockerfile-openmpi-gdal-py3  FindLLVM.cmake  Home.md  Install_Linux.sh  Install_Windows.bat  Install_macOS.sh  MongoUtil.h  README-BMPOrdersOpt.md  README-zh-cn.md  README.md  README.rst  README.zh-cn.md  SetEnvMPI.cmd  SetFlagGDAL.cmake  SetFlagOpenMP.cmake  _Footer.md  _Sidebar.md  _a_e_t___priestley_taylor_hargreaves_8h.html  _a_e_t___priestley_taylor_hargreaves_8h_source.html  _atmospheric_deposition_8h.html  _atmospheric_deposition_8h_source.html  _b_m_p_areal_source_factory_8h.html  _b_m_p_areal_source_factory_8h_source.html  _b_m_p_areal_struct_factory_8h.html  _b_m_p_areal_struct_factory_8h_source.html  _b_m_p_factory_8h.html  _b_m_p_factory_8h_source.html  _b_m_p_plant_mgt_factory_8h.html  _b_m_p_plant_mgt_factory_8h_source.html  _b_m_p_point_source_factory_8h.html  (+1084 more)
apps/: CMakeLists.txt  mask_rasterio.cpp  mask_rasterio.h  reclassify_raster.cpp  reclassify_raster.h
doc/: CMakeLists.txt  Doxyfile.in  Doxyfile.in.bak  Doxyfile.zh-cn  Doxyfile.zh-cn.in  Doxyfile.zh-cn.in.bak  LANGS.md  README.md  git-config-bak  travis-doxygen.sh  update_relative_paths_for_doxygen.py
doc/common/: abbreviations.md  index.md
doc/doxygen/: Doxyfile  Doxyfile-local-test  customdoxygen.css  doxy-boot.js  doxygen_def_modules.h  footer.html  header.html  publish-doxygen  travisci_rsa  travisci_rsa.enc  travisci_rsa.pub
doc/en/: README.md  sec1_introduction.md  sec2_get_started.md  sec3_framework_design.md  sec4_write_your_code.md  sec5_theory.md
doc/misc/: footer.html  header.html
doc/style/: ReSharper_setting.DotSettings  SEIMS_Cpp_Style.xml  SEIMS_python_style.xml
doc/subtree/: add_subtree.sh  pull_subtree.sh  push_subtree.sh
doc/theoretical_documentation/: abbreviations.md
doc/theory/: index.md  soil_hydraulic_characteristics.md
doc/wiki/: Home.md  _Footer.md  _Sidebar.md  mk_sidebar.py
doc/zh-cn/: README.md  sec1_introduction.md  sec2_get_started.md  sec3_framework_design.md  sec4_write_your_code.md  sec5_theory.md
libmetis/: CMakeLists.txt  compress.c  initpart.c  kmetis.c  kwayfm.c  mmd.c  ometis.c  pmetis.c  separator.c  wspace.c
programs/: CMakeLists.txt  cmdline_gpmetis.c  cmpfillin.c  mpmetis.c
seims/: CMakeLists.txt  FindBson.cmake  FindMongoC.cmake  Firewall_for_Windows.bat  README.md  __init__.py  calc_sed_sum.py  climate2swat.py  environment_py39.yml  global_mongoclient.py  manual_tuning.sh  manual_tuning_one_win.py  manual_tuning_win.py  post_optimization.py  py27seims_env.yml  py39seims_env.yml  pySEIMS_install.bat  pySEIMS_install.sh  pyseims_check.py  pyseims_env.yml  pyseims_install.bat  pyseims_install_linux.sh  reimport_run_post.sh  requirements-purepip.txt  requirements.txt  run_seims.py  runmodel.sh  scenario_analysis_api.py  seims_model_cfg_template.ini  services.py
seims/calibration/: QuerySitelist.py  README.md  __init__.py  cali_config_template.ini  cali_config_zts_fld.ini  cali_param_rng_template.def  cali_param_rng_zts_fld.def  calibrate.py  calibration.sh  config.py  generate_param_file_from_cali.py  hostname.txt  main.py  main_nsga2.py  main_nsga2_ray.py  sample_lhs.py  userdef.py  write_hostsfile.py
seims/cmake/: SetThreadFlagMSVC.cmake
seims/database/: AvailableOutputs.txt  CropLookup.txt  FertilizerLookup.txt  LanduseLookup.txt  README.md  SoilLookup.txt  TillageLookup.txt  UrbanLookup.txt  model_param_ini.txt
seims/nogit/: export_scenario_demo.py
seims/parameters_sensitivity/: README.md  __init__.py  config.py  evaluate.py  figure.py  hostname.txt  main.py  psa_config_template.ini  psa_param_rng_template.def  sensitivity.py  sensitivity_analysis.sh  sensitivity_analysis_plot.sh  userdef.py  write_hostsfile.py
seims/postprocess/: README.md  RelativeImportModules.py  __init__.py  cast_hru_raster_to_shp.py  config.py  hydroPlot.py  hydroPlot_main.py  load_mongodb.py  main.py  plot_best_in_calibration.py  plot_timeseries.py  post_config_template.ini  post_config_zts.ini  postprocess.sh  read_subbasins_output.py  requirements.txt  run_models.py  run_models_dingguang.py  test.py  utility.py
seims/preprocess/: Firewall_for_Windows.bat  MeteorologicalDaily.py  PrecipitationDaily.py  README.md  TauDEM.py  __init__.py  adjust_groups.py  bmp_import_scenario.py  build_db.py  chwidth.py  cn2.py  config.py  db_build_mongodb.py  db_import_bmpscenario.py  db_import_daily_meteo.py  db_import_daily_rainfall.py  db_import_interpolation_weights.py  db_import_meteorology.py  db_import_model_parameters.py  db_import_observed.py  db_import_precipitation.py  db_import_sites.py  db_import_stream_parameters.py  db_import_subbasin_statistics.py  db_mongodb.py  db_read_model.py  db_sqlite.py  delta_s.py  depression.py  find_sites.py  gen_dinf.py  gen_lookup_table.py  gen_paddyIrrFlow.py  gen_subbasins.py  generate_stream_input.py  hydro_climate_data_itp.py  hydro_climate_utility.py  hydro_find_sites.py  hydroclimate_sites.py  import_bmp_scenario.py  (+43 more)
seims/pygeoc/: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  README_CN.md  __init__.py  reinstall.bat  reinstall.sh  setup.py
seims/scenario_analysis/: IntroductionNSGA-II.md  README.md  (+13 more)
src_ext/: CMakeLists.txt  Curvature.cpp  D8DistUpToRidge.cpp  D8DistUpToRidgemn.cpp  DinfDistUpToRidge.cpp  MultiFlowDirMaxDown.cpp  MultiFlowDirMaxDownmn.cpp  RPISkidmore.cpp  SimpleCalculator.h  SimpleCalculatormn.cpp
test/: CMakeLists.txt  Test_1D-nopos_incst-mask-nopos-ext.cpp  Test_1D-nopos_incst-mask-nopos-noext.cpp  Test_1D-nopos_incst-mask-pos-ext.cpp  Test_1D-nopos_incst-mask-pos-noext.cpp  Test_1D-pos-nomask.cpp  Test_1D-pos_incst-mask-nopos-ext.cpp  Test_1D-pos_incst-mask-nopos-noext.cpp  Test_1D-pos_incst-mask-pos-ext.cpp  Test_1D-pos_incst-mask-pos-noext.cpp  Test_2D-pos-nomask.cpp  Test_2D-pos_incst-mask-pos-ext.cpp  Test_2D-pos_incst-mask-pos-noext.cpp  Test_incst-mask-nopos.cpp  Test_incst-mask-pos.cpp  Test_utilsMath.cpp  Test_utilsString.cpp
(+3616 files in other folders)
